--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\ScriptableObjects\BodyPartSO.cs" />
+    <Compile Include="Assets\Scripts\ScriptableObjects\CharacterBodySO.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
