--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,21 +62,22 @@
     <Analyzer Include="C:\Users\jerem\.vscode\extensions\visualstudiotoolsforunity.vstuc-0.9.4\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\ScriptableObjects\CharacterBodySO.cs" />
-    <Compile Include="Assets\Scripts\BodyPartsManager.cs" />
-    <Compile Include="Assets\Scripts\ScriptableObjects\BodyPartSO.cs" />
-    <Compile Include="Assets\Scripts\BodyPartsSelector.cs" />
-    <Compile Include="Assets\Scripts\Player.cs" />
-    <Compile Include="Assets\PlayerControls.cs" />
     <Compile Include="Assets\Scripts\InputManager.cs" />
     <Compile Include="Assets\Scripts\Interaction\Interactor.cs" />
-    <Compile Include="Assets\Scripts\Interaction\IInteractable.cs" />
-    <Compile Include="Assets\Scripts\Interaction\Door.cs" />
+    <Compile Include="Assets\Scripts\ScriptableObjects\CharacterBodySO.cs" />
     <Compile Include="Assets\Scripts\Interaction\ShopKeeper.cs" />
+    <Compile Include="Assets\Scripts\BodyPartsManager.cs" />
+    <Compile Include="Assets\Scripts\ScriptableObjects\BodyPartSO.cs" />
+    <Compile Include="Assets\Scripts\Interaction\Door.cs" />
     <Compile Include="Assets\Scripts\RotatePlayer.cs" />
-    <Compile Include="Assets\ShopkeeperMenu.cs" />
+    <Compile Include="Assets\Scripts\BodyPartsSelector.cs" />
     <Compile Include="Assets\Scripts\Interaction\Chest.cs" />
     <Compile Include="Assets\Scripts\Interaction\Wardrobe.cs" />
+    <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\PlayerControls.cs" />
+    <Compile Include="Assets\Scripts\Interaction\IInteractable.cs" />
+    <Compile Include="Assets\ShopkeeperMenu.cs" />
+    <Compile Include="Assets\Scripts\Interaction\InteractionPromptUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -1083,12 +1084,20 @@
       <HintPath>Library\ScriptAssemblies\Unity.2D.IK.Runtime.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Cinemachine">
+      <HintPath>Library\ScriptAssemblies\Cinemachine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Unity.Services.Core.Analytics">
       <HintPath>Library\ScriptAssemblies\Unity.Services.Core.Analytics.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.Burst">
       <HintPath>Library\ScriptAssemblies\Unity.Burst.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="com.unity.cinemachine.editor">
+      <HintPath>Library\ScriptAssemblies\com.unity.cinemachine.editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Unity.VisualScripting.Shared.Editor">
@@ -1133,14 +1142,6 @@
     </Reference>
     <Reference Include="Unity.VisualScripting.State">
       <HintPath>Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="com.unity.cinemachine.editor">
-      <HintPath>Library\ScriptAssemblies\com.unity.cinemachine.editor.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Cinemachine">
-      <HintPath>Library\ScriptAssemblies\Cinemachine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
